--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
                 </div>
                 <div class="social-media">
                     <ul>
-                        <li>
-                            <a href="#">
+                        <li  id="facebook">
+                            <a href="https://www.facebook.com/csesucsd/">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span> - Facebook</span>
                             </a>
                         </li>
-                        <li>
-                            <a href="#">
+                        <li id="instagram">
+                            <a href="https://www.instagram.com/cses_ucsd/">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span> - Instagram</span>
+                            <span > - Instagram</span>
                             </a>
                         </li>
-                        <li>
-                            <a href="#">
+                        <li id="gmail">
+                            <a href="mailto:cses@eng.ucsd.edu">
                             <i class="fa fa-google-plus" aria-hidden="true"></i>
-                            <span> - Gmail</span>
+                            <span > - Gmail</span>
                             </a>
                         </li>
-                        <li>
-                            <a href="#">
+                        <li id="discord">
+                            <a href="https://discord.gg/aKmkVb9VXt">
                             <i class="fa fa-discord" aria-hidden="true"></i>
-                            <span> - Discord</span>
+                            <span > - Discord</span>
                             </a>
                         </li>
                     </ul>
