--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
                 <div class="social-media">
                     <ul>
                         <li  id="facebook">
-                            <a href="https://www.facebook.com/csesucsd/">
+                            <a href="https://www.facebook.com/csesucsd/" target = "_black">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span> - Facebook</span>
                             </a>
                         </li>
                         <li id="instagram">
-                            <a href="https://www.instagram.com/cses_ucsd/">
+                            <a href="https://www.instagram.com/cses_ucsd/" target = "_black">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span > - Instagram</span>
                             </a>
                         </li>
                         <li id="gmail">
-                            <a href="mailto:cses@eng.ucsd.edu">
+                            <a href="mailto:cses@eng.ucsd.edu" target = "_black">
                             <i class="fa fa-google-plus" aria-hidden="true"></i>
                             <span > - Gmail</span>
                             </a>
                         </li>
                         <li id="discord">
-                            <a href="https://discord.gg/aKmkVb9VXt">
+                            <a href="https://discord.gg/aKmkVb9VXt" target = "_black">
                             <i class="fa fa-discord" aria-hidden="true"></i>
                             <span > - Discord</span>
                             </a>
